<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:paddingLeft="@dimen/about_padding_content"
    android:paddingRight="@dimen/about_padding_content"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/about_wrap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/lp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/aa"
            android:textSize="@dimen/about_title_size" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/about_text"
            android:textColor="@color/soft_grey"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/aa"
            android:textSize="@dimen/about_hightlight_text_size" />

        <Button
            android:id="@+id/share_us_button"
            style="@style/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_button_blue"
            android:text="@string/share_it"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rate_us_button"
            style="@style/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_button_blue"
            android:text="@string/rate_it"
            android:textColor="@android:color/white"
            android:textSize="@dimen/about_button_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>